<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droido - Mensagens SMS prontas</string>
    <string name="version_name">5.4</string>
    <string name="version_code">38</string>
    <string name="app_version">Versão: 5.4.38</string>
    <string name="footer_loading">Carregando...</string>
    <string name="row_options">Opções</string>
    <!-- ACTION BAR -->
    <string name="action_search">Buscar</string>
    <string name="action_search_hint">Pesquisar por mensagem</string>
    <string name="action_menu">Menu</string>

    <!-- MENU DE OPçÔES PRINCIPAL -->
    <string name="option_rate">Avaliar</string>
    <string name="option_ordenar">Ordenar</string>
    <string name="option_send">Envie a sua</string>
    <string name="option_more">Mais Aplicativois</string>

    <!-- MENU MENSAGEMS -->
    <string name="mensagem_avaliar">Avaliar</string>
    <string name="mensagem_compartilhar">Compartilhar</string>
    <string name="mensagem_editar">Editar</string>
    <string name="mensagem_favorito">Adicionar/Remover dos Favoritos</string>
    <string name="mensagem_enviado">Marcar/Desmarcar como enviada</string>

    <!-- Filtros -->
    <string name="ordem_aleatoria">Aleatória</string>
    <string name="ordem_melhores">Melhores primeiro</string>
    <string name="ordem_favoritos">Favoritos Primeiro</string>
    <string name="ordem_novas">Novas Primeiro</string>
    <string name="ordem_nao_enviadas">Não Enviadas Primeiro</string>
    <string name="ordem_enviadas">Enviadas Primeiro</string>

    <!-- Menu Inferior (Actionbar) -->
    <string name="menu_mais_apps">Mais Aplicativos</string>
    <string name="menu_avaliar">Avaliar</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="mensagem_copiar">Copiar</string>
    <string name="send_to">Enviar para...</string>
    <string name="success_clipboarded">Sua mensagem foi copiada para área de transferêcia caso queira colá-la em algum lugar :)</string>
    <string name="mensagem_btn_fav">Favoritar</string>
    <string name="novidades_titulo">O que há de novo?</string>
    <string name="novidades">
     * Corrigido problema de travamento ao baixar novas mensagens\n
     * Resolvido problema de mensagens repetidas\n
     * Melhoria no sistema de syncronismo\n
     * Novo sistema de atualização de mensagens, agora você receberá novas mensagens sem precisar atualizar o aplicativo\n\n
     * Notificações de novas mensagens!\n\n
     * Aplicativo iniciando até 10 vezes mais rápido!\n\n
     * Alguns problemas resolvidos\n\n
     * Agora pode ser movido para o cartão de memória
    </string>
    <string name="novidade_dismiss">Verificar se existem novas mensagens!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="message_author">Luiz Carvalho</string>
    <string name="title_activity_load_screen">LoadScreen</string>

    <string name="update_mensagens">Carregando Mensagens...</string>
    <string name="action_ordenar">Ordenar</string>
    <string name="mensagem_gostar">Gostei</string>
    <string name="mensagem_nao_gostar">Não gostei</string>
    <string name="mensagem_report">Reportar</string>
    <string name="report_title">O que você deseja reportar?</string>
    <string name="redrails_dev">RedRails Mobile</string>
    <string name="app_author">\@Luizcarvalho</string>
    <string name="report_response">Informaremos isto aos nossos desenvolvedores, que terão o prazer de gastar sábados, domingos e feriados melhorando o Droido pra você!</string>
    <string name="title_activity_sync"> Sinconizador de Mensagens </string>
    <string name="sync_db_button_text">Baixar novas mensagens</string>
    <string name="sync_default_result">Nenhuma dado recebido!</string>
    <string name="sync_connect_error">Infelizmente Não conseguimos conectar com nossos servidores. Tente novamente mais tarde.</string>
    <string name="sync_received_message">mensagens recebidas</string>
    <string name="sync_received_categories"> categorias recebidas</string>
    <string name="reload_mensagens">Ok! Recarrege minhas mensagens!</string>
    <string name="need_connection">Você precisa de internet para baixar novas mensagens!</string>

</resources>
