<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_menu"
        android:title="@string/action_ordenar"
        android:icon="@drawable/ic_action_sort_by_size"
        app:showAsAction="always"
        />

<!-- menu inferiro -->
    <item
        android:id="@+id/menu_mais_apps"
        android:title="@string/menu_mais_apps"
        android:icon="@drawable/ic_more_app"
        app:showAsAction="never"
        />
    <!--
    <item
        android:id="@+id/menu_configuracoes"
        android:title="@string/menu_configuracoes"
        android:icon="@drawable/ic_config"
        app:showAsAction="never"
        />
    -->
    <item
        android:id="@+id/menu_avaliar"
        android:title="@string/menu_avaliar"
        android:icon="@drawable/ic_menu_fav"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_sobre"
        android:title="@string/menu_sobre"
        android:icon="@drawable/ic_about"
        app:showAsAction="never"
        />


</menu>